# Snake

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: cmrc.cmake
include/: Config.hpp  Field.hpp  Fruit.hpp  Game.hpp  Menu.hpp  ScoreManager.hpp  Snake.hpp
src/: Field.cpp  Fruit.cpp  Game.cpp  Menu.cpp  ScoreManager.cpp  Snake.cpp  main.cpp
